# yfinance-cli

./: AGENTS.md  CONTEXT.md  Dockerfile  MEMORY.md  README.md  pyproject.toml
skills/yfinance-cli/: SKILL.md
skills/yfinance-cli/agents/: openai.yaml
src/yfinance_cli/: __init__.py  charts.py  cli.py  constants.py  errors.py  renderers.py  service.py  validation.py
tests/: test_cli.py  test_hello.py  test_service.py
